fixed homepage image alignment, log out button alignment, about us title alignment, added dollar sign

--- a/src/main/resources/static/css/addproduct.css
+++ b/src/main/resources/static/css/addproduct.css
@@ -7,7 +7,7 @@ main {
   height: 80vh;
 }
 
-form {
+main > form {
   max-width: 900px;
   width: 90%;
   margin: 0 auto;
